test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/multiple-rules-match-exclude(deprecated)/chainsaw-step-01-apply-1-2.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    policy.lan/flag: "true"
  name: ns-multiple-rules-match-exclude
