test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/multiple-rules-match-exclude(deprecated)/chainsaw-step-01-apply-1-3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-a
  namespace: ns-multiple-rules-match-exclude
spec:
  containers:
  - image: nginx
    name: nginx
