test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/multiple-rules-match-exclude(deprecated)/pod-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    policy.lan/apply-flag: "true"
  name: nginx-a
  namespace: ns-multiple-rules-match-exclude
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    policy.lan/apply-flag: "true"
  name: nginx-b
  namespace: ns-multiple-rules-match-exclude
